------------------------------------------------------------------------
0.0201  2013-01-21      Piotr Roszatycki <dexter@cpan.org>

------------------------------------------------------------------------
0.02    2012-09-04      Piotr Roszatycki <dexter@cpan.org>

* WSDL filename is guessed from request data filename.
* User-Agent is "soapcli/$VERSION".
* Supports HTTP proxy.
* Requires YAML::XS for dumping of request (has better output format).

------------------------------------------------------------------------
0.01    2012-08-12      Piotr Roszatycki <dexter@cpan.org>

* First CPAN release.

------------------------------------------------------------------------